--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "crypto-js": "^4.2.0",
     "firebase": "^11.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
